--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,16 +1,126 @@
-*{
-    margin:0px;
+* {
+    margin: 0px;
     padding: 0px;
 }
 
+@font-face {
+    font-family: 'Montserrat Bold';
+    src: url('../fonts/MONTSERRAT-BOLD.ttf') format('truetype');
+    font-style: normal;
+    font-weight: normal;
+}
+@font-face {
+    font-family: 'Montserrat Regular';
+    src: url('../fonts/MONTSERRAT-REGULAR.ttf') format('truetype');
+    font-style: normal;
+    font-weight: normal;
+}
+@font-face {
+    font-family: 'Montserrat Semibold';
+    src: url('../fonts/MONTSERRAT-SEMIBOLD.ttf') format('truetype');
+    font-style: normal;
+    font-weight: normal;
+}
+.smile_foundation{
+    background: #f94a29;
+    border-radius: 0px 77px 0px 0px;
+    z-index: 100;
+    position: absolute;
+    width: 700px;
+    margin-top: 53px;
+}
+#img_1_home{
+    background-image: url(/imgs/imagen_1_home.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100%;
+    height: 585px;
+    position: relative;
+}
+.left_text2{
+    width: 70%;
+    color: #00649a;
+    font-family: "Montserrat Bold";
+    font-size: 22px;
+}
+.left_2{
+    margin-top: 321px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.left{
+    width: 50%;
+}
+.right{
+    width: 50%;
+}
+#donate_icon{
+    display: flex;
+}
+body{
+    font-family: "Montserrat Regular";
+}
 .nav{
     display: flex;
     position: fixed;
-    /*background-color: rgb(146, 56, 56);*/
+    top: 0;
+    /* background-color: rgb(146, 56, 56); */
     width: 100%;
-    flex-direction:row-reverse;
+    flex-direction: row-reverse;
+    font-family: "Montserrat Regular";
+    flex-direction: column;
+    z-index: 100;
+
 }
-.menu{
+
+.wrapper{
+    display: flex;
+    margin-top: 100px;
+}
+.icon_smile{
+    width: 100px;
+    background-color: red;
+    position: fixed;
+    display: flex;
+}
+
+#logo_pequeno{
+    background-image: url(/imgs/logo_pequeno.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    margin-top: 15px;
+    margin-left: 15px;
+}
+.menu_menu{
+    display: flex;
+    flex-direction: row-reverse;
+}
+.donate_social{
+    display: flex;
+    flex-direction: row-reverse;
+    cursor: pointer;
+}
+#donate_icon{
+    display: flex;
+    flex-flow: row-reverse;
+    margin-right: 10px;
+    margin-top: 10px;
+    color: red;
+}
+#donate_letra{
+    display: flex;
+    flex-flow: row-reverse;
+    margin-right: 10px;
+    margin-top: 10px;
+    color: red;
+    FONT-SIZE: 13px;
+}
+.menu {
     cursor: pointer;
     display: flex;
     margin-top: 10px;
@@ -18,32 +128,69 @@
     width: 100px;
     height: 100px;
     align-items: flex-end;
+    align-self: flex-end;
 }
-
-#menu_letra{
+#smile_bold_text{
+    font-family: "Montserrat Bold";
+    color: white;
+    font-size: 80px;
+    margin-left: 40px;
+}
+#smile_regular_text{
+    font-family: "Montserrat Regular";
+    color: white;
+    margin-left: 40px;
+    font-size: 40px;
+}
+.social_network{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: 10px;
+    margin-top: 0px;
+}
+.social_network i{
+    margin-top: 7px;
+    font-size: 17px;
+    cursor: pointer;
+}
+#menu_letra {
     display: flex;
     flex-direction: column-reverse;
     margin: 0px 10px 0px 0px;
     cursor: pointer;
+    font-weight: bold;
 }
-#menuColor1{
+
+#menuColor1 {
     width: 27%;
     height: 50px;
     background-color: #002e5d;
 }
-#menuColor2{
+
+#menuColor2 {
     width: 57%;
     height: 50px;
     background-color: #f94a29;
-    border-radius: 10px 0px 0px 0px;
+    border-radius: 15px 0px 0px 0px;
 }
-#menuColor3{
+
+#menuColor3 {
     width: 41%;
     height: 50px;
     background-color: #00649a;
 }
-#menuColor4{
+
+#menuColor4 {
     width: 100%;
     height: 50px;
     background-color: #fce22a;
+}
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: center;
 }
