--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -381,22 +381,22 @@ body{
 .trip-left1{
     background-image: url(/imgs/trip1.png);
     background-repeat: no-repeat;
-    width: 263px;
-    height: 350px;
+    width: 400px;
+    height: 500px;
     background-size: contain;
 }
 .trip-left3{
     background-image: url(/imgs/trip3.png);
     background-repeat: no-repeat;
-    width: 263px;
-    height: 350px;
+    width: 400px;
+    height: 500px;
     background-size: contain;
 }
 .trip-left2{
     background-image: url(/imgs/trip2.png);
     background-repeat: no-repeat;
-    width: 263px;
-    height: 350px;
+    width: 400px;
+    height: 500px;
     background-size: contain;
 }
 .trip-right1{
@@ -438,7 +438,7 @@ body{
 .trip{
     
     display: flex;
-
+    z-index: 200;
 }
 .second_texto1{
     font-family: 'Montserrat Bold';
@@ -482,15 +482,16 @@ body{
 }
 .text_final_footer{
     text-align: center;
+    margin-bottom: 10px;
 }
 .text_final_footer2{
     text-align: center;
+    font-size: 12px;
 }
 footer{
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
     justify-content: center;
     background-color: #002e5d;
     color: white;
@@ -554,3 +555,9 @@ footer{
     margin-top: 50px;
     cursor: pointer;
 }
+.trip-right1 .trip-text{
+    margin-left: 15px;
+}
+@media only screen and (max-width: 1045px) {
+
+  }
