--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,19 +9,22 @@
     font-style: normal;
     font-weight: normal;
 }
+
 @font-face {
     font-family: 'Montserrat Regular';
     src: url('../fonts/MONTSERRAT-REGULAR.TTF') format('truetype');
     font-style: normal;
     font-weight: normal;
 }
+
 @font-face {
     font-family: 'Montserrat Semibold';
     src: url('../fonts/MONTSERRAT-SEMIBOLD.ttf') format('truetype');
     font-style: normal;
     font-weight: normal;
 }
-.smile_foundation{
+
+.smile_foundation {
     background: #f94a29;
     border-radius: 0px 77px 0px 0px;
     z-index: 100;
@@ -32,7 +35,8 @@
     flex-direction: column;
     align-items: end;
 }
-#img_1_home{
+
+#img_1_home {
     background-image: url(/imgs/imagen_1_home.png);
     background-repeat: no-repeat;
     background-size: contain;
@@ -40,32 +44,38 @@
     height: 585px;
     position: relative;
 }
-.left_text2{
+
+.left_text2 {
     width: 70%;
     color: #00649a;
     font-family: "Montserrat Bold";
     font-size: 22px;
 }
-.left_2{
+
+.left_2 {
     margin-top: 321px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.left{
+.left {
     width: 50%;
 }
-.right{
+
+.right {
     width: 50%;
 }
-#donate_icon{
+
+#donate_icon {
     display: flex;
 }
-body{
+
+body {
     font-family: "Montserrat Regular";
 }
-.nav{
+
+.nav {
     display: flex;
     position: fixed;
     top: 0;
@@ -74,10 +84,11 @@ body{
     flex-direction: row-reverse;
     font-family: "Montserrat Regular";
     flex-direction: column;
-    z-index: 200;
+    z-index: 500;
 
 }
-.smile_icon_background{
+
+.smile_icon_background {
     background-image: url(/imgs/sonrisa_azul.png);
     background-repeat: no-repeat;
     background-size: contain;
@@ -89,7 +100,8 @@ body{
     margin-top: 70px;
     opacity: 0.5;
 }
-.smile_icon_background2{
+
+.smile_icon_background2 {
     background-image: url(/imgs/sonrisa_azul.png);
     background-repeat: no-repeat;
     background-size: contain;
@@ -102,11 +114,13 @@ body{
     margin-top: 102px;
     opacity: 0.5;
 }
-.four_part{
+
+.four_part {
     display: flex;
     margin-top: 82px;
 }
-.four_title{
+
+.four_title {
     background: #f94a29;
     width: 45%;
     font-family: 'Montserrat Bold';
@@ -121,7 +135,8 @@ body{
     display: flex;
     margin-top: 75px;
 }
-.four_text{
+
+.four_text {
     color: #002e5d;
     font-family: 'Montserrat Bold';
     width: 285px;
@@ -130,7 +145,8 @@ body{
     margin-bottom: 20px;
 
 }
-.four_button{
+
+.four_button {
     color: #002e5d;
     font-family: 'Montserrat Bold';
     background: #fce22a;
@@ -142,7 +158,8 @@ body{
     cursor: pointer;
     margin-left: 20px;
 }
-.five_part{
+
+.five_part {
     display: flex;
     margin-top: 69px;
     background-image: url(/imgs/imagen_007_home.png);
@@ -154,12 +171,14 @@ body{
     flex-direction: column;
     background-position-y: 86px;
 
-}/*
+}
+
+/*
 .five_part_photo{
     background-image: url('imgs/imagen_007_home.png');
 
 }*/
-.five_part_head{
+.five_part_head {
     background: #002e5d;
     width: 55%;
     font-family: 'Montserrat Bold';
@@ -176,7 +195,8 @@ body{
     margin-top: 75px;
     align-self: baseline;
 }
-.five_part_button{
+
+.five_part_button {
     background: #fce22a;
     width: 300px;
     align-self: center;
@@ -188,7 +208,8 @@ body{
     margin-top: 20px;
     margin-bottom: -45px;
 }
-.left_four{
+
+.left_four {
     background-image: url(/imgs/imagen_006_home.png);
     background-repeat: no-repeat;
     width: 100vw;
@@ -196,27 +217,31 @@ body{
     background-size: contain;
     margin-left: 10%;
 }
-.right_four{
+
+.right_four {
     display: flex;
     flex-direction: column;
     width: 100%;
 }
-.wrapper{
+
+.wrapper {
     display: flex;
     flex-direction: column;
 }
-.first_part{
+
+.first_part {
     display: flex;
     margin-top: 149px;
 }
-.icon_smile{
+
+.icon_smile {
     width: 100px;
     background-color: red;
     position: fixed;
     display: flex;
 }
 
-#logo_pequeno{
+#logo_pequeno {
     background-image: url(/imgs/logo_pequeno.png);
     background-repeat: no-repeat;
     background-size: contain;
@@ -226,23 +251,27 @@ body{
     margin-top: 15px;
     margin-left: 15px;
 }
-.menu_menu{
+
+.menu_menu {
     display: flex;
     flex-direction: row-reverse;
 }
-.donate_social{
+
+.donate_social {
     display: flex;
     flex-direction: row-reverse;
     cursor: pointer;
 }
-#donate_icon{
+
+#donate_icon {
     display: flex;
     flex-flow: row-reverse;
     margin-right: 10px;
     margin-top: 10px;
     color: red;
 }
-#donate_letra{
+
+#donate_letra {
     display: flex;
     flex-flow: row-reverse;
     margin-right: 10px;
@@ -250,6 +279,7 @@ body{
     color: red;
     FONT-SIZE: 13px;
 }
+
 .menu {
     cursor: pointer;
     display: flex;
@@ -260,16 +290,19 @@ body{
     align-items: flex-end;
     align-self: flex-end;
 }
-.partnerships_div{
+
+.partnerships_div {
     width: 80px;
     margin: 20px;
     cursor: pointer;
 }
-.partnerships{
+
+.partnerships {
     display: flex;
     flex-wrap: wrap;
 }
-#smile_bold_text{
+
+#smile_bold_text {
     word-break: break-word;
     font-family: "Montserrat Bold";
     color: white;
@@ -279,25 +312,29 @@ body{
     padding-top: 30px;
     margin-right: 60px;
 }
-#smile_regular_text{
+
+#smile_regular_text {
     font-family: "Montserrat Regular";
     color: white;
     font-size: 37px;
     margin-right: 60px;
     margin-bottom: 15px;
 }
-.social_network{
+
+.social_network {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     margin-right: 10px;
     margin-top: 0px;
 }
-.social_network i{
+
+.social_network i {
     margin-top: 7px;
     font-size: 17px;
     cursor: pointer;
 }
+
 #menu_letra {
     display: flex;
     flex-direction: column-reverse;
@@ -330,23 +367,27 @@ body{
     height: 50px;
     background-color: #fce22a;
 }
-.second_part{
+
+.second_part {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.third_part{
+
+.third_part {
     display: flex;
     justify-content: center;
     background-color: #002e5d;
     padding: 40px 0px 40px 0px;
 }
-.third_datos{
+
+.third_datos {
     color: white;
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.third_boton{
+
+.third_boton {
     background-color: #00649a;
     color: white;
     text-align: center;
@@ -355,19 +396,22 @@ body{
     padding: 10px 0px 10px 0px;
     cursor: pointer;
 }
-.third_secundary_title{
+
+.third_secundary_title {
     font-family: 'Montserrat Bold';
     color: white;
     font-size: 33px;
     margin-top: 20px;
 }
-.third_title{
+
+.third_title {
     font-family: 'Montserrat Bold';
     color: white;
     font-size: 42px;
     margin-top: 20px;
 }
-.third_part .part_right{
+
+.third_part .part_right {
     background-image: url(/imgs/imagen_005_home.png);
     background-repeat: no-repeat;
     width: 310px;
@@ -375,10 +419,12 @@ body{
     background-size: contain;
     margin-left: 60px;
 }
-.part_left{
+
+.part_left {
     z-index: 100;
 }
-.trip-left1{
+
+.trip-left1 {
     background-image: url(/imgs/trip1.png);
     background-repeat: no-repeat;
     width: 400px;
@@ -387,7 +433,8 @@ body{
     box-shadow: 8px 0px 13px #858181;
     background-size: cover;
 }
-.trip-left3{
+
+.trip-left3 {
     background-image: url(/imgs/trip3.png);
     background-repeat: no-repeat;
     width: 400px;
@@ -396,7 +443,8 @@ body{
     box-shadow: 8px 0px 13px #858181;
     background-size: cover;
 }
-.trip-left2{
+
+.trip-left2 {
     background-image: url(/imgs/trip2.png);
     background-repeat: no-repeat;
     width: 400px;
@@ -405,13 +453,14 @@ body{
     box-shadow: 8px 0px 13px #858181;
     background-size: cover;
 }
-.trip-right1{
+
+.trip-right1 {
     margin-top: 40px;
     display: flex;
     flex-direction: column;
 }
 
-.trip-title1{
+.trip-title1 {
     background: #f94a29;
     width: fit-content;
     padding: 10px 10px 5px 10px;
@@ -421,7 +470,8 @@ body{
     font-size: 15px;
     font-weight: bolder;
 }
-.trip-title3{
+
+.trip-title3 {
     background: #00649a;
     width: fit-content;
     padding: 10px 10px 5px 10px;
@@ -431,7 +481,8 @@ body{
     font-size: 15px;
     font-weight: bolder;
 }
-.trip-title2{
+
+.trip-title2 {
     background: #fce22a;
     width: 100%;
     padding: 10px 10px 5px 10px;
@@ -441,12 +492,14 @@ body{
     font-size: 15px;
     font-weight: bolder;
 }
-.trip{
+
+.trip {
     display: flex;
     z-index: 200;
     margin-bottom: 30px;
 }
-.second_texto1{
+
+.second_texto1 {
     font-family: 'Montserrat Bold';
     color: #002e5d;
     font-size: 37px;
@@ -454,7 +507,8 @@ body{
     margin-right: 100px;
     margin-bottom: 38px;
 }
-.Partnership_button{
+
+.Partnership_button {
     color: #002e5d;
     font-family: 'Montserrat Bold';
     background: #fce22a;
@@ -469,32 +523,38 @@ body{
     margin-top: 50px;
     margin-bottom: 50px;
 }
-.top_footer{
+
+.top_footer {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin-bottom: 20px;
 }
-.footer_left{
+
+.footer_left {
     display: flex;
     flex-direction: column;
-    padding:20px;
+    padding: 20px;
 
 }
-.footer_right{
+
+.footer_right {
     display: flex;
     flex-direction: column;
-    padding:20px;
+    padding: 20px;
 }
-.text_final_footer{
+
+.text_final_footer {
     text-align: center;
     margin-bottom: 10px;
 }
-.text_final_footer2{
+
+.text_final_footer2 {
     text-align: center;
     font-size: 12px;
 }
-footer{
+
+footer {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -502,13 +562,16 @@ footer{
     background-color: #002e5d;
     color: white;
 }
-.footer_left a{
+
+.footer_left a {
     margin-top: 10px;
 }
-.footer_right a{
+
+.footer_right a {
     margin-top: 10px;
 }
-.soldout{
+
+.soldout {
     background-color: #00649a;
     color: white;
     text-align: center;
@@ -517,7 +580,8 @@ footer{
     margin-top: 10px;
     cursor: pointer;
 }
-.six_part{
+
+.six_part {
     display: flex;
     background-image: url(/imgs/imagen_008_home.png);
     background-repeat: no-repeat;
@@ -528,7 +592,8 @@ footer{
     z-index: 1;
     flex-direction: column;
 }
-.six_title{
+
+.six_title {
     display: flex;
     font-size: 60px;
     font-family: 'Montserrat Bold';
@@ -537,8 +602,9 @@ footer{
     margin-top: 47px;
     align-self: center;
 }
-.registration{
-    background-color:#f94a29;
+
+.registration {
+    background-color: #f94a29;
     color: white;
     text-align: center;
     border-radius: 10px;
@@ -546,12 +612,14 @@ footer{
     margin-top: 10px;
     cursor: pointer;
 }
-.learnmore{
+
+.learnmore {
     color: #00649a;
     cursor: pointer;
     margin-top: 10px;
 }
-.boton_yellow1{
+
+.boton_yellow1 {
     background: #fce22a;
     padding: 0px 74px 0px 74px;
     font-size: 40px;
@@ -561,9 +629,168 @@ footer{
     margin-top: 50px;
     cursor: pointer;
 }
-.trip-right1 .trip-text{
+
+.trip-right1 .trip-text {
     margin-left: 15px;
 }
-@media only screen and (max-width: 500px) {
-    
-  }
+
+@media only screen and (max-width: 1050px) {
+    .smile_foundation {
+        background: #f94a29;
+        border-radius: 0px 77px 0px 0px;
+        z-index: 100;
+        position: absolute;
+        width: 86%;
+        margin-top: -30px;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+    }
+
+    #smile_regular_text {
+        font-family: "Montserrat Regular";
+        color: white;
+        font-size: 3.2vw;
+        margin-right: 70px;
+        margin-bottom: 15px;
+    }
+    .left{
+        width: 100%;
+    }
+    .right{
+        width: 100%;
+    }
+    .first_part {
+        display: flex;
+        flex-direction: column-reverse;
+        margin-top: 149px;
+    }
+    #smile_bold_text {
+        word-break: break-word;
+        font-family: "Montserrat Bold";
+        color: white;
+        font-size: 7vw;
+        line-height: 80%;
+        padding-top: 30px;
+        margin-right: 60px;
+    }
+    .left_2 {
+        margin-top: 100px;
+    }
+    #trip1{
+        flex-direction: column;
+    }
+    #trip2{
+        flex-direction: column-reverse;
+    }
+    #trip3{
+        flex-direction: column;
+    }
+    .third_part {
+
+        flex-direction: column;
+
+    }
+    .smile_icon_background2 {
+        background-image: url(/imgs/sonrisa_azul.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 100px;
+        height: 100px;
+        z-index: 1;
+        position: absolute;
+        margin-left: 0px;
+        left: 0;
+        opacity: 0.5;
+    }
+    .smile_icon_background {
+        background-image: url(/imgs/sonrisa_azul.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 163px;
+        height: 169px;
+        z-index: 1;
+        position: absolute;
+        margin-left: 47%;
+        margin-top: 70px;
+        opacity: 0.5;
+    }
+    .four_part {
+        display: flex;
+        margin-top: 82px;
+        flex-direction: column;
+        width: 100vw;
+    }
+    .four_button {
+        color: #002e5d;
+        font-family: 'Montserrat Bold';
+        background: #fce22a;
+        width: 300px;
+        text-align: center;
+        font-size: 19px;
+        border-radius: 5px;
+        padding: 10px 0px 10px 0px;
+        cursor: pointer;
+        margin-left: 20px;
+    }
+    .four_title {
+        background: #f94a29;
+        font-family: 'Montserrat Bold';
+        width: 81%;
+        font-size: 38px;
+        color: white;
+        border-radius: 40px 0px 0px 0px;
+        text-align: center;
+        padding: 10px 10px 10px;
+        padding: 20px 0px 20px 30px;
+        align-self: center;
+        position: absolute;
+        display: flex;
+        margin-top: -45px;
+    }
+    .four_text {
+        color: #002e5d;
+        font-family: 'Montserrat Bold';
+        width: 90%;
+        margin-left: 20px;
+        margin-top: 95px;
+        margin-bottom: 20px;
+    }
+    .left_four {
+        background-image: url(/imgs/imagen_006_home.png);
+        background-repeat: no-repeat;
+        width: 90vw;
+        height: 60vh;
+        background-size: contain;
+        margin-left: 0;
+    }
+    .right_four {
+        display: flex;
+        flex-direction: column;
+        width: 90vw;
+    }
+    .five_part_head {
+        background: #002e5d;
+        width: 87%;
+    }
+    .five_part {
+        width: 100%;
+        height: 497px;
+        background-position-y: 193px;
+    }
+    .six_title {
+        display: flex;
+        font-size: 43px;
+        font-family: 'Montserrat Bold';
+        color: #002e5d;
+        -webkit-text-stroke: 2px black;
+        margin-top: 47px;
+        align-self: center;
+        text-align: center;
+    }
+    .partnerships {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
